# hookbus

./: .gitignore  Dockerfile  HOOKBUS_SPEC.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUBSCRIBER_BACKLOG.md  docker-compose.yml  entrypoint.sh  hookbus.yaml  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt  subscribers.with-agentspend.yaml  subscribers.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hookbus/: __init__.py  api_state.py  bus.py  client.py  dashboard.py  licence.py  protocol.py  publisher_helpers.py
hookbus/publishers/: provisioner.py  registry.py  state.py
hookbus/publishers/bundles/claude_code/: README.md  hookbus-gate.py
hookbus/publishers/bundles/openclaw/: index.js  openclaw.plugin.json  package.json
hookbus/publishers/hookbus-gate/: README.md  hookbus-gate.plugin.json  package.json
hookbus/publishers/hookbus-gate/handlers/: amp-delegate.js  claude-code-hook.js  codex-hook.js  gemini-beforeagent.js  hermes.js  openclaw-plugin.js  shell-wrapper.js
hookbus/publishers/hookbus-gate/src/: core.js  hookbus_gate.py  index.js
hookbus/publishers/hookbus-normaliser/: README.md  hookbus-normalise  pyproject.toml
hookbus/publishers/hookbus-normaliser/hookbus_normaliser/: __init__.py  cli.py  core.py
hookbus/subscribers/: __init__.py
tests/: test_c2_fail_closed.py  test_cre_e2e.py  test_echo.py  test_preprompt.py
tests/publishers/: test_bus_main.py  test_provisioner.py  test_registry.py  test_state.py
(+1 files in other folders)
